# rust_projects

guessing_game/src/: main.rs
leptos-ssr-axum/: Cargo.toml  README.md
leptos-ssr-axum/src/: app.rs  main.rs
leptos-tutorial/: Cargo.toml  index.html
leptos-tutorial/src/: main.rs
rust_book/OOP_like_rust/: Cargo.toml
rust_book/OOP_like_rust/src/: main.rs
rust_book/adder/src/: lib.rs
rust_book/advanced_functions_and_closures/src/: main.rs
rust_book/advanced_types/src/: main.rs
rust_book/aggregator/src/: lib.rs
rust_book/aggregator_testing/: Cargo.toml
rust_book/aggregator_testing/src/: main.rs
rust_book/blog/src/: lib.rs
rust_book/blog_new/: Cargo.toml
rust_book/blog_new/src/: main.rs
rust_book/branches/src/: main.rs
rust_book/breaking_apart/: Cargo.toml
rust_book/defer_trait/: Cargo.toml
rust_book/errors_panics/: Cargo.toml
rust_book/guesser_testing/: Cargo.toml
rust_book/pair_example/: Cargo.toml
rust_book/pancakes/: Cargo.toml
rust_book/patterns_and_such/: Cargo.toml
rust_book/rectangle_closures/: Cargo.toml
rust_book/refcell_and_interior_mutability_pattern/: Cargo.toml
rust_book/reference_counted_smart_pointer/: Cargo.toml
rust_book/unsafe_stuff/: Cargo.toml
rust_by_example/formatting_prints/: Cargo.toml
rust_code_wars/codewars_playground/: Cargo.toml
rust_exercism/removing_duplicates/: Cargo.toml
rust_exercism/testingground/: Cargo.toml
rust_leetcode/: Cargo.toml
rust_leetcode/src/: main.rs
rust_wasm/yew_app/: Cargo.toml
tabnine_test/: Cargo.toml
tabnine_test/src/: main.rs
(+45 files in other folders)
