[package]
name = "pancakes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hello_macro = { path = "/home/simeon/Documents/Programming/Projects/rust_projects/rust_book/hello_macro/" }
hello_macro_derive = { path = "/home/simeon/Documents/Programming/Projects/rust_projects/rust_book/hello_macro/hello_macro_derive/" }
